API修正
