# APIserver/models/model_inline_object.go
@@ -2,5 +2,7 @@ package models
 
 type InlineObject struct {
 
+	SessionId string `json:"session_id"`
+
 	Content ApiPostHaikuContent `json:"content"`
 }
