# APIserver/models/model_inline_object_1.go
@@ -1,0 +1,6 @@
+package models
+
+type InlineObject1 struct {
+
+	SessionId string `json:"session_id,omitempty"`
+}
