# APIserver/models/model_inline_object_2.go
@@ -1,0 +1,6 @@
+package models
+
+type InlineObject2 struct {
+
+	SessionId string `json:"session_id,omitempty"`
+}
