# APIserver/models/model_inline_object_3.go
@@ -1,0 +1,6 @@
+package models
+
+type InlineObject3 struct {
+
+	SessionId string `json:"session_id"`
+}
