# APIserver/models/model_inline_object_4.go
@@ -1,0 +1,6 @@
+package models
+
+type InlineObject4 struct {
+
+	SessionId string `json:"session_id,omitempty"`
+}
