# APIserver/models/model_inline_object_5.go
@@ -1,0 +1,6 @@
+package models
+
+type InlineObject5 struct {
+
+	SessionId string `json:"session_id,omitempty"`
+}
